NetBSD Problem Report #53250

From martin@aprisoft.de  Wed May  2 10:27:53 2018
Return-Path: <martin@aprisoft.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 79A5A7A1C8
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  2 May 2018 10:27:53 +0000 (UTC)
Message-Id: <20180502102742.C87A95CC8BC@emmas.aprisoft.de>
Date: Wed,  2 May 2018 12:27:42 +0200 (CEST)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: bind sha1 failure
X-Send-Pr-Version: 3.95

>Number:         53250
>Category:       bin
>Synopsis:       bind sha1 failure
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed May 02 10:30:00 +0000 2018
>Closed-Date:    Wed May 02 14:45:14 +0000 2018
>Last-Modified:  Wed May 02 14:50:00 +0000 2018
>Originator:     Martin Husemann
>Release:        NetBSD 8.99.14
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD whoever-brings-the-night.aprisoft.de 8.99.14 NetBSD 8.99.14 (WHOEVER) #214: Sat Apr 28 12:51:59 CEST 2018 martin@seven-days-to-the-wolves.aprisoft.de:/work/src/sys/arch/sparc64/compile/WHOEVER sparc64
Architecture: sparc64
Machine: sparc64
>Description:

Runing "host 1.1.1.1" on a big endian host (or whatever, works on x86)
fails:

/work/src/external/bsd/bind/dist/lib/dns/hmac_link.c:664: fatal error: RUNTIME_CHECK(isc_sha1_check(isc_boolean_false)) failed
(gdb) bt
#0  abort () at /work/src/lib/libc/stdlib/abort.c:80
#1  0x000000004115b590 in isc_error_fatal (
    file=file@entry=0x40cbf7f8 "/work/src/external/bsd/bind/dist/lib/dns/hmac_link.c", line=line@entry=664, format=0x4116bfa0 "RUNTIME_CHECK(%s) %s")
    at /work/src/external/bsd/bind/dist/lib/isc/error.c:79
#2  0x000000004115b5f8 in isc_error_runtimecheck (
    file=0x40cbf7f8 "/work/src/external/bsd/bind/dist/lib/dns/hmac_link.c", 
    line=line@entry=664, 
    expression=0x40cbf9c8 "isc_sha1_check(isc_boolean_false)")
    at /work/src/external/bsd/bind/dist/lib/isc/error.c:84
#3  0x0000000040b58264 in dst__hmacsha1_init (funcp=funcp@entry=0x40e28768)
    at /work/src/external/bsd/bind/dist/lib/dns/hmac_link.c:664
#4  0x0000000040b5be78 in dst_lib_init2 (mctx=<optimized out>, 
    ectx=0x4372a000, engine=0x0, eflags=<optimized out>)
    at /work/src/external/bsd/bind/dist/lib/dns/dst_api.c:209
#5  0x000000000010dc54 in setup_libs ()
    at /work/src/external/bsd/bind/dist/bin/dig/dighost.c:1585
#6  0x0000000000114660 in main (argc=<optimized out>, argv=0xffffffffffffd598)
    at /work/src/external/bsd/bind/dist/bin/dig/host.c:904


>How-To-Repeat:
s/a

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/53250: bind sha1 failure
Date: Wed, 2 May 2018 12:32:21 +0200

 On Wed, May 02, 2018 at 10:30:00AM +0000, martin@NetBSD.org wrote:
 > Runing "host 1.1.1.1" on a big endian host (or whatever, works on x86)
 > fails:

 Seems indeed to be an endianess issue.

 Working:
 	alpha, evbarm, amd64

 Not working:
 	sparc64, evbearmv7hf-eb

 Martin

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 02 May 2018 14:45:14 +0000
State-Changed-Why:
Fixed by switching to the working code in openssl


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/53250 CVS commit: src/external/bsd/bind/include/isc
Date: Wed, 2 May 2018 14:43:59 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed May  2 14:43:59 UTC 2018

 Modified Files:
 	src/external/bsd/bind/include/isc: platform.h

 Log Message:
 Use crypto code from openssl. Fixes PR bin/53250, suggested by Christos.


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/external/bsd/bind/include/isc/platform.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.