Use crypto code from openssl. Fixes PR bin/53250, suggested by Christos.